Version 0.1.860047
Switched to Java 9 collection factories which have become available for SDK API below level 30 probably through Java 8+ API desugaring.