@@ -4,10 +4,7 @@ import android.content.Context;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -15,18 +12,13 @@ import java.util.Set;
 
 import ilchev.stefan.binarywrapper.BaseDaemonRunnable;
 
-@SuppressWarnings("Java9CollectionFactory")
 public class DaemonRunnable extends BaseDaemonRunnable {
 
-	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_END = Collections.unmodifiableSet(new HashSet<>(
-			Arrays.asList(-9, 1)
-	));
+	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_END = Set.of(-9, 1);
 
-	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_SKIP = Collections.unmodifiableSet(new HashSet<>(
-			Arrays.asList(-1, 0)
-	));
+	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_SKIP = Set.of(-1, 0);
 
-	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_START = Collections.singleton(5);
+	private static final Set<Integer> SUBPROCESS_EXIT_VALUES_START = Set.of(5);
 
 	private final Map<String, File> subprocessAssets;
 
@@ -41,18 +33,14 @@ public class DaemonRunnable extends BaseDaemonRunnable {
 		var externalFilesDir = Objects.requireNonNull(context.getExternalFilesDir(null));
 		var nativeLibraryDir = context.getApplicationInfo().nativeLibraryDir;
 		var addonDir = new File(externalFilesDir, ".kodi/addons/" + BuildConfig.ADDON_ID);
-		subprocessAssets = Collections.unmodifiableMap(new HashMap<>() {{
-			put(BuildConfig.ADDON_ID, addonDir);
-		}});
-		subprocessCmd = Collections.unmodifiableList(new ArrayList<>() {{
-			add("./libelementum.so");
-			if (subprocessArgs != null) {
-				Collections.addAll(this, subprocessArgs);
-			}
-		}});
-		subprocessEnv = Collections.unmodifiableMap(new HashMap<>() {{
-			put("LD_LIBRARY_PATH", nativeLibraryDir);
-		}});
+		subprocessAssets = Map.of(BuildConfig.ADDON_ID, addonDir);
+		var subprocessCmd = new ArrayList<String>();
+		subprocessCmd.add("./libelementum.so");
+		if (subprocessArgs != null) {
+			Collections.addAll(subprocessCmd, subprocessArgs);
+		}
+		this.subprocessCmd = Collections.unmodifiableList(subprocessCmd);
+		subprocessEnv = Map.of("LD_LIBRARY_PATH", nativeLibraryDir);
 		lockFile = new File(addonDir, ".lockfile");
 	}
 
